--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Moniyot.co.il - דומיין למכירה</title>
+<link rel="icon" type="image/png" href="image/favico.png">
 
 <style>
 * {
